# project-anchor

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  RUNBOOK.md  binance_testnet_cancel_order.sh  binance_testnet_check_order.sh  binance_testnet_place_limit_ioc.sh  binance_testnet_position.sh  place_test_order.sh  requirements.in  requirements.txt  test_binance_testnet.sh
anchor-backend/: .env.example  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  requirements.txt
anchor-backend/app/: domain_events.py  main.py  settings.py  trade_gate_production.py
anchor-backend/docs/: CLOUD_AUTOMATION_GUARDRAIL_PLAN_V1.md  CLOUD_PORT_EXPOSURE_HOTFIX_2026-05-08.md  DOMAIN_COMMAND_VALIDATION_DEV_USAGE_V1.md  PROJECT_ANCHOR_EARLY_DEMO_CANDIDATES_V1.md  PROJECT_ANCHOR_EARLY_DEMO_CONTACT_LOG_V1.md  PROJECT_ANCHOR_EARLY_DEMO_FEEDBACK_SUMMARY_V1.md  PROJECT_ANCHOR_EARLY_DEMO_INTERVIEW_RECORD_V1.md  PROJECT_ANCHOR_EARLY_DEMO_OUTREACH_LOG_V1.md  PROJECT_ANCHOR_EARLY_DEMO_RECRUITING_LIST_V1.md  PROJECT_ANCHOR_EARLY_DEMO_SCOPE_V1.md  PROJECT_ANCHOR_EARLY_DEMO_SCRIPT_V1.md  PROJECT_ANCHOR_READONLY_DEMO_ENTRY_PLAN_V1.md  PROJECT_ANCHOR_READONLY_DEMO_ENTRY_TASKCARD_V1.md  TRADE_GATE_DRY_RUN_ORDER_INTENT_V1.md
anchor-backend/migrations/: 0001_create_commands_domain.sql  0002_add_result_to_commands.sql  0003_ensure_commands_domain_result_jsonb.sql  0004_domain_events.sql  0005_ops_state.sql  0006_risk_state.sql  apply.sh
anchor-backend/ops/: VERIFY_phase38.md  (+12 more)
(+811 files in other folders)
